Login now redirects to dashboard. Added gender to signup page and handling for it. Fixed the age number box being too small when downsizing the window. Added some styling to gender box.

--- a/RegistrationPage.css
+++ b/RegistrationPage.css
@@ -55,12 +55,36 @@ body {
     font-weight: bold;
     font-size: 22px;
 }
+.wrapper .gender-select {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    transform: translateY(50%);
+    margin-top: -2%;
+    margin-bottom: 2%;
+    font-family: "Candara", sans-serif;
+    font-weight: bold;
+    font-size: 22px;
+}
+
+.gender-box {
+    font-family: "Candara", sans-serif;
+    font-weight: bold;
+    min-width: 18%;
+    width: 10vw;
+    height: 50%;
+    background-color: #af9b9a;
+    color: black;
+    font-size: 18px;
+    border: none;
+}
+
 
 .age-select input {
     font-family: "Candara", sans-serif;
     font-weight: bold;
-    min-width: 2%;
-    width:3vh;
+    min-width: 3vw;
+    max-width: 8vw;
     height: 50%;
     background-color: #af9b9a;
     color: black;
